There will be no nested variables, added the ability to refer to variables via strings.